<resources>
    <string name="textvew1">demoKotlinPart1</string>
    <string name="Email">Button</string>
    <string name="textview1">TextView</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="log_in_or_sign_up_to_airbnb">Log in or sign up to Airbnb</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue1">continue</string>
    <string name="app_name">TipTime</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="buttondemo">button</string>
</resources>
